--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Wizard/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Wizard/Themes/Generic.xaml
@@ -6,6 +6,9 @@
     <coreConverters:WizardPageButtonVisibilityConverter x:Key="WizardPageButtonVisibilityConverter" />
 
     <Style TargetType="{x:Type local:Wizard}">
+        <Setter Property="Background" Value="#F0F0F0" />
+        <Setter Property="BorderBrush" Value="#A0A0A0" />
+        <Setter Property="BorderThickness" Value="1" />
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
@@ -25,66 +28,68 @@
 
                             <ContentPresenter Content="{Binding CurrentPage, RelativeSource={RelativeSource TemplatedParent}}" />
 
-                            <StackPanel Background="{TemplateBinding Background}" Grid.Row="1" Margin="7">
-                                <Grid Margin="{TemplateBinding Padding}">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition Width="*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Button Name="PART_HelpButton" Grid.Column="0" MinWidth="75" 
+                            <Border Grid.Row="1" Background="#F0F0F0" BorderBrush="#A0A0A0" BorderThickness="0,1,0,0" Padding="7"  >
+                                <StackPanel Background="{TemplateBinding Background}">
+                                    <Grid Margin="{TemplateBinding Padding}">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        <Button Name="PART_HelpButton" Grid.Column="0" MinWidth="75" 
                                             Command="local:WizardCommands.Help" 
                                             Content="{TemplateBinding HelpButtonContent}">
-                                        <Button.Visibility>
-                                            <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
-                                                <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="HelpButtonVisibility" />
-                                                <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.HelpButtonVisibility" />
-                                            </MultiBinding>
-                                        </Button.Visibility>
-                                    </Button>
-                                    <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                                        <Button Name="PART_CancelButton" Margin="0,0,7,0" MinWidth="75" 
+                                            <Button.Visibility>
+                                                <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="HelpButtonVisibility" />
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.HelpButtonVisibility" />
+                                                </MultiBinding>
+                                            </Button.Visibility>
+                                        </Button>
+                                        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                                            <Button Name="PART_CancelButton" Margin="0,0,7,0" MinWidth="75" 
                                                 Command="local:WizardCommands.Cancel" 
                                                 Content="{TemplateBinding CancelButtonContent}" >
-                                            <Button.Visibility>
-                                                <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
-                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CancelButtonVisibility" />
-                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.CancelButtonVisibility" />
-                                                </MultiBinding>
-                                            </Button.Visibility>
-                                        </Button>
-                                        <Button Name="PART_BackButton" MinWidth="75" 
+                                                <Button.Visibility>
+                                                    <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                        <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CancelButtonVisibility" />
+                                                        <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.CancelButtonVisibility" />
+                                                    </MultiBinding>
+                                                </Button.Visibility>
+                                            </Button>
+                                            <Button Name="PART_BackButton" MinWidth="75" 
                                                 Command="local:WizardCommands.PreviousPage" 
                                                 Content="{TemplateBinding BackButtonContent}" >
-                                            <Button.Visibility>
-                                                <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
-                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="BackButtonVisibility" />
-                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.BackButtonVisibility" />
-                                                </MultiBinding>
-                                            </Button.Visibility>
-                                        </Button>
-                                        <Button Name="PART_NextButton" MinWidth="75" 
+                                                <Button.Visibility>
+                                                    <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                        <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="BackButtonVisibility" />
+                                                        <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.BackButtonVisibility" />
+                                                    </MultiBinding>
+                                                </Button.Visibility>
+                                            </Button>
+                                            <Button Name="PART_NextButton" MinWidth="75" 
                                                 Command="local:WizardCommands.NextPage"
                                                 Content="{TemplateBinding NextButtonContent}" >
-                                            <Button.Visibility>
-                                                <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
-                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="NextButtonVisibility" />
-                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.NextButtonVisibility" />
-                                                </MultiBinding>
-                                            </Button.Visibility>
-                                        </Button>
-                                        <Button Name="PART_FinishButton" Margin="7,0,0,0" MinWidth="75" 
+                                                <Button.Visibility>
+                                                    <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                        <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="NextButtonVisibility" />
+                                                        <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.NextButtonVisibility" />
+                                                    </MultiBinding>
+                                                </Button.Visibility>
+                                            </Button>
+                                            <Button Name="PART_FinishButton" Margin="7,0,0,0" MinWidth="75" 
                                                 Command="local:WizardCommands.Finish" 
                                                 Content="{TemplateBinding FinishButtonContent}" >
-                                            <Button.Visibility>
-                                                <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
-                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="FinishButtonVisibility" />
-                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.FinishButtonVisibility" />
-                                                </MultiBinding>
-                                            </Button.Visibility>
-                                        </Button>
-                                    </StackPanel>
-                                </Grid>
-                            </StackPanel>
+                                                <Button.Visibility>
+                                                    <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                        <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="FinishButtonVisibility" />
+                                                        <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.FinishButtonVisibility" />
+                                                    </MultiBinding>
+                                                </Button.Visibility>
+                                            </Button>
+                                        </StackPanel>
+                                    </Grid>
+                                </StackPanel>
+                            </Border>
                         </Grid>
                     </Border>
                 </ControlTemplate>
@@ -92,30 +97,58 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type local:WizardPage}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:WizardPage}">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <Grid Name="PART_Header" >
-                            <StackPanel Grid.Column="0">
-                                <TextBlock Margin="16,9,0,1" TextWrapping="Wrap" FontWeight="Bold" Text="{TemplateBinding Title}" />
-                                <TextBlock Margin="32,0,0,3" TextWrapping="Wrap" Text="{TemplateBinding Description}" />
-                            </StackPanel>
-                        </Grid>
-                        <Border Grid.Row="1" SnapsToDevicePixels="true" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
-                            <Grid Background="{TemplateBinding Background}">
-                                <ContentPresenter Margin="14" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}" />
-                            </Grid>
-                        </Border>
+    <ControlTemplate x:Key="BlankWizardPageTemplate" TargetType="{x:Type local:WizardPage}">
+        <Border SnapsToDevicePixels="true" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
+            <Grid Background="{TemplateBinding Background}">
+                <ContentPresenter Margin="14" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}" />
+            </Grid>
+        </Border>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="ExteriorWizardPageTemplate" TargetType="{x:Type local:WizardPage}">
+        <Border SnapsToDevicePixels="true" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
+            <Grid Background="{TemplateBinding Background}">
+                <ContentPresenter Margin="14" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}" />
+            </Grid>
+        </Border>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="InteriorWizardPageTemplate" TargetType="{x:Type local:WizardPage}">
+        <Border SnapsToDevicePixels="true" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <Grid Name="PART_Header">
+                    <StackPanel Grid.Column="0">
+                        <TextBlock Margin="16,9,0,1" TextWrapping="Wrap" FontWeight="Bold" Text="{TemplateBinding Title}" />
+                        <TextBlock Margin="32,0,0,3" TextWrapping="Wrap" Text="{TemplateBinding Description}" />
+                    </StackPanel>
+                </Grid>
+
+                <Border Grid.Row="1" SnapsToDevicePixels="true" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
+                    <Grid Background="{TemplateBinding Background}">
+                        <ContentPresenter Margin="14" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}" />
                     </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
+                </Border>
+            </Grid>
+        </Border>
+    </ControlTemplate>
+
+    <Style TargetType="{x:Type local:WizardPage}">
+        <Style.Triggers>
+            <Trigger Property="PageType" Value="Blank">
+                <Setter Property="Template" Value="{StaticResource BlankWizardPageTemplate}" />
+            </Trigger>
+            <Trigger Property="PageType" Value="Exterior">
+                <Setter Property="Template" Value="{StaticResource ExteriorWizardPageTemplate}" />
+            </Trigger>
+            <Trigger Property="PageType" Value="Interior">
+                <Setter Property="Template" Value="{StaticResource InteriorWizardPageTemplate}" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
 </ResourceDictionary>
